SERVER-17441 mongos crash right after "not master" error